# gil

./: .gitignore  README.md  pyproject.toml
gil/: cli.py  core.py  paths.py  utils.py
tests/: test_gil.py
