[tool.poetry]
name = "gil"
version = "0.1.0"
description = ""
authors = ["Stefan Otte <stefan.otte@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
graphviz = "^0.15"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
devtools = "^0.6.1"
pyright = "^1.1.253"

[tool.poetry.scripts]
gil = "gil.cli:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
